# iceberg-nsdi26-artifact

./: .gitmodules  README.md  hickory-dns.md
iceberg/: .gitattributes  .gitignore  Cargo.toml  README.md  bind-callgraph.dot
iceberg/.github/workflows/: std.yml
iceberg/impl/CoreDNS/: README.md
iceberg/impl/PowerDNS/: README.md
iceberg/impl/bind/: README.md
iceberg/llvm_frontend/: Cargo.toml
iceberg/llvm_frontend/src/: ast.rs  lib.rs  llvm.lalrpop
iceberg/logs/: coredns-simple.txt
iceberg/panicky/: Cargo.toml
iceberg/panicky/src/: lib.rs
iceberg/spice_frontend/: Cargo.toml  build.rs
iceberg/spice_frontend/src/: DESIGN.md  ast.rs  lib.rs  spice.lalrpop
iceberg/src/: lib.rs  main.rs  panic.rs  verify.rs
iceberg/src/backend/: CAVEATS.md  DESIGN.md  mod.rs  solver.rs
iceberg/src/glue/: llvm.rs  mod.rs  spice.rs
iceberg/src/middleend/: ast.rs  cfg.rs  exp.rs  mod.rs  se.rs  types.rs
iceberg/src/util/: counted.rs  mod.rs  nonce.rs  timed.rs  todot.rs  union_find.rs
iceberg/src/verify/: bind.rs  coredns.rs  hickory_dns.rs  pdns.rs
iceberg/test/: README.md  cloc-lang.def
iceberg/test/bind/: .gitignore  BUGS.md  README.md  bind.spec  config.toml  dump.in  zone.sh
iceberg/test/coredns/: .gitignore  BUGS.md  README.md  config.toml  coredns.spec  lookup.O1.ll  lookup.O1.opt.ll  lookup.O1.opt.oz.ll  lookup.O1.opt.oz.verify.ll  lookup.go  types.go
iceberg/test/hickory-dns/: .gitignore  BUGS.md  README.md  config.toml  dump.in  hickory-dns.spec
iceberg/test/llvm/: README.md  agg.c  agg.ll  boolean.c  boolean.ll  config.exception.toml  config.heap.toml  config.leak.toml  config.leak_ptr.toml  config.toml  data.c  data.ll  dns.O1.opt.oz.ll  dnsname.ll  exception.cpp  exception.ll  funcp.c  funcp.ll  havoc.c  havoc.ll  heap.c  heap.ll  intrinsic.c  intrinsic.ll  leak.c  leak.ll  leak_ptr.c  leak_ptr.ll  lookup.O1.opt.oz.ll  loop.c  loop.ll  panic.c  panic.ll  pointers.c  pointers.ll  query.ll  question.c  question.ll  rdata.ll  recurse.c  (+9 more)
iceberg/test/pdns/: BUGS.md  README.md  auto_dump.hh  config.toml  dump.in  pdns.spec  zone.sh
iceberg/test/spec/: lambda.spec  lib.spec  refmodel-new.spec  refmodel-old.spec  (+1 more)
(+4255 files in other folders)
