[workspace]
members = [
    "llvm_frontend", "spice_frontend",
]

[package]
name = "iceberg"
version = "0.1.0"
authors = ["EchoStone <echostone@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
llvm_frontend = { path = "./llvm_frontend", features = ["test"] }
spice_frontend = { path = "./spice_frontend", features = ["test"] }
panicky = { path = "./panicky" }
itertools = "0.11.0"
log = { version = "0.4.19", features = ["max_level_trace", "release_max_level_warn"] }
# log = "0.4.19"
env_logger = "0.10.0"
z3 = { version="0.12.1", features = ["static-link-z3"] } # This builds the latest Z3 and link it statically
indent = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10.12", features = ["toml"] }
serde_json = {version="1.0.111", features = ["preserve_order"]}
fxhash = "0.2.1"
by_address = "1.1.0"

[profile.dev]
opt-level = 1
overflow-checks = true
lto = false
incremental = true

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
incremental = true
codegen-units = 1
debug = false

[features]
default = ["traces", "strategies", "errors"]

# Should tracing be enabled?
traces = []

# Should 128-bit integers be used for `Exp::IntLiteral`s?
int128 = []

# Selection of strategies
strategies = ["strat_casp"]
strat_casp = []                           # Comparison Always Specializes Pointers?

# Selection of error checks
errors = []
err_stack_pointer_leak = []               # Is leaking stack pointers an error?
